force-app/main/default/objects/Task_Sequence__c/Task_Sequence__c.object-meta.xml
<CustomObject>
    <label>Task Sequence</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>