force-app/main/default/objects/Task_Sequence__c/fields/Process_Track__c.field-meta.xml
<CustomField>
    <fullName>Process_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Track</label>
    <referenceTo>Process_Track__c</referenceTo>
    <relationshipLabel>Task Sequences</relationshipLabel>
    <relationshipName>Task_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>