force-app/main/default/objects/Task_Sequence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process_Track__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Estimated_Duration__c</columns>
    <columns>Sequence_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>